madmoose.chani-rs.9db44aa4b83581ce4806fede01a2a3ccd58bb11e
Running as unit: run-p1539022-i5732713.scope; invocation ID: 68cf48fc5f7e419b9092608f24d852b3
   Compiling proc-macro2 v1.0.95
   Compiling unicode-ident v1.0.18
    Checking cfg-if v1.0.1
    Checking bitflags v2.9.1
    Checking once_cell v1.21.3
   Compiling libc v0.2.174
   Compiling serde_core v1.0.222
   Compiling serde v1.0.222
   Compiling rustix v1.0.8
    Checking linux-raw-sys v0.9.4
    Checking smallvec v1.15.1
   Compiling autocfg v1.5.0
    Checking log v0.4.27
   Compiling memchr v2.7.5
    Checking pin-project-lite v0.2.16
   Compiling winnow v0.7.12
   Compiling pkg-config v0.3.32
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.15.5
   Compiling quote v1.0.40
   Compiling toml_datetime v0.6.11
   Compiling crossbeam-utils v0.8.21
   Compiling syn v2.0.104
    Checking libloading v0.8.8
   Compiling static_assertions v1.1.0
   Compiling cfg_aliases v0.2.1
    Checking slab v0.4.11
    Checking parking v2.2.1
   Compiling indexmap v2.10.0
    Checking concurrent-queue v2.5.0
    Checking futures-core v0.3.31
    Checking dlib v0.5.2
   Compiling wayland-sys v0.31.7
   Compiling shlex v1.3.0
   Compiling cc v1.2.32
    Checking event-listener v5.4.1
    Checking event-listener-strategy v0.5.4
    Checking fastrand v2.3.0
    Checking futures-io v0.3.31
    Checking stable_deref_trait v1.2.0
   Compiling endi v1.1.0
    Checking downcast-rs v1.2.1
    Checking scoped-tls v1.0.1
    Checking futures-lite v2.6.1
   Compiling wayland-backend v0.3.11
   Compiling quick-xml v0.37.5
   Compiling toml_edit v0.22.27
   Compiling wayland-client v0.31.11
   Compiling wayland-scanner v0.31.7
   Compiling memoffset v0.9.1
   Compiling thiserror v1.0.69
   Compiling rustix v0.38.44
    Checking async-lock v3.4.1
    Checking tracing-core v0.1.34
    Checking async-task v4.7.1
    Checking polling v3.10.0
    Checking linux-raw-sys v0.4.15
    Checking async-io v2.5.0
    Checking async-channel v2.5.0
    Checking signal-hook-registry v1.4.6
   Compiling nix v0.30.1
   Compiling khronos_api v3.1.0
    Checking atomic-waker v1.1.2
    Checking ttf-parser v0.25.1
   Compiling getrandom v0.3.3
   Compiling version_check v0.9.5
   Compiling zerocopy v0.8.26
   Compiling proc-macro-crate v3.3.0
   Compiling ahash v0.8.12
    Checking piper v0.2.4
    Checking async-signal v0.2.12
    Checking ab_glyph_rasterizer v0.1.9
    Checking async-process v2.4.0
    Checking blocking v1.6.2
    Checking async-executor v1.13.2
    Checking async-broadcast v0.7.2
    Checking ordered-stream v0.2.0
   Compiling lock_api v0.4.13
   Compiling parking_lot_core v0.9.11
   Compiling synstructure v0.13.2
    Checking wayland-protocols v0.32.9
    Checking hex v0.4.3
   Compiling xml-rs v0.8.27
    Checking litemap v0.8.0
    Checking writeable v0.6.1
    Checking owned_ttf_parser v0.25.1
   Compiling x11-dl v2.21.0
    Checking accesskit v0.19.0
    Checking ab_glyph v0.2.31
   Compiling serde_derive v1.0.222
   Compiling enumflags2_derive v0.7.12
   Compiling zerofrom-derive v0.1.6
   Compiling bytemuck_derive v1.10.1
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling thiserror-impl v1.0.69
   Compiling displaydoc v0.2.5
    Checking zerofrom v0.1.6
   Compiling tracing-attributes v0.1.30
    Checking bytemuck v1.23.2
    Checking yoke v0.8.0
    Checking zerovec v0.11.4
   Compiling async-trait v0.1.88
   Compiling serde_repr v0.1.20
    Checking zerotrie v0.2.2
   Compiling gl_generator v0.14.0
   Compiling smithay-client-toolkit v0.19.2
    Checking percent-encoding v2.3.1
    Checking xcursor v0.3.10
   Compiling icu_normalizer_data v2.0.0
    Checking xkeysym v0.2.1
    Checking cursor-icon v1.2.0
    Checking scopeguard v1.2.0
   Compiling icu_properties_data v2.0.1
    Checking tracing v0.1.41
    Checking calloop v0.13.0
    Checking wayland-csd-frame v0.3.0
    Checking wayland-cursor v0.31.11
    Checking memmap2 v0.9.7
    Checking arrayref v0.3.9
    Checking simd-adler32 v0.3.7
    Checking strict-num v0.1.1
   Compiling crc32fast v1.5.0
    Checking parking_lot v0.12.4
    Checking tiny-skia-path v0.11.4
    Checking calloop-wayland-source v0.3.0
    Checking tinystr v0.8.1
    Checking potential_utf v0.1.2
    Checking icu_collections v2.0.0
    Checking icu_locale_core v2.0.0
    Checking emath v0.32.0
    Checking x11rb-protocol v0.13.1
    Checking foldhash v0.1.5
    Checking arrayvec v0.7.6
    Checking as-raw-xcb-connection v1.0.1
    Checking adler2 v2.0.1
    Checking miniz_oxide v0.8.9
    Checking zvariant_utils v3.2.0
    Checking enumflags2 v0.7.12
    Checking quick-xml v0.36.2
    Checking icu_provider v2.0.0
    Checking tiny-skia v0.11.4
   Compiling zvariant_derive v5.6.0
    Checking icu_properties v2.0.1
    Checking wayland-protocols-wlr v0.3.9
   Compiling zvariant v5.6.0
    Checking icu_normalizer v2.0.0
    Checking ecolor v0.32.0
   Compiling winit v0.30.12
   Compiling num-traits v0.2.19
    Checking epaint_default_fonts v0.32.0
    Checking raw-window-handle v0.6.2
    Checking profiling v1.0.17
    Checking nohash-hasher v0.2.0
    Checking epaint v0.32.0
    Checking flate2 v1.1.2
    Checking accesskit_consumer v0.28.0
    Checking idna_adapter v1.2.1
    Checking wayland-protocols-plasma v0.3.9
    Checking xkbcommon-dl v0.4.2
    Checking fdeflate v0.3.7
   Compiling glutin_glx_sys v0.6.1
    Checking sctk-adwaita v0.10.1
   Compiling glutin_egl_sys v0.7.1
   Compiling futures-macro v0.3.31
    Checking pin-utils v0.1.0
    Checking dpi v0.1.2
    Checking utf8_iter v1.0.4
    Checking smol_str v0.2.2
    Checking bitflags v1.3.2
    Checking futures-task v0.3.31
    Checking unicode-segmentation v1.12.0
    Checking png v0.17.16
    Checking futures-util v0.3.31
    Checking egui v0.32.0
    Checking zbus_names v4.2.0
    Checking zbus_xml v5.0.2
    Checking idna v1.0.3
    Checking form_urlencoded v1.2.1
   Compiling glutin v0.32.3
    Checking zbus-lockstep v0.5.1
   Compiling zbus_macros v5.9.0
    Checking byteorder-lite v0.1.0
    Checking url v2.5.4
    Checking image v0.25.6
   Compiling zbus-lockstep-macros v0.5.1
   Compiling glutin-winit v0.5.0
   Compiling serde_json v1.0.145
    Checking webbrowser v1.0.5
    Checking smithay-clipboard v0.7.2
    Checking glow v0.16.0
    Checking ryu v1.0.20
   Compiling litrs v0.4.2
    Checking web-time v1.1.0
    Checking itoa v1.0.15
   Compiling document-features v0.2.11
    Checking disasm v0.1.0 (/tmp/nix-shell.cigUv1/madmoose_chani-rs_o503ebnf/crates/disasm)
    Checking bytes_ext v0.1.0 (/tmp/nix-shell.cigUv1/madmoose_chani-rs_o503ebnf/crates/bytes_ext)
    Checking zbus v5.9.0
    Checking egui_glow v0.32.0
    Checking chani_core v0.1.0 (/tmp/nix-shell.cigUv1/madmoose_chani-rs_o503ebnf/crates/chani_core)
error[E0635]: unknown feature `bigint_helper_methods`
 --> crates/chani_core/src/lib.rs:6:12
  |
6 | #![feature(bigint_helper_methods)]
  |            ^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0635`.
error: could not compile `chani_core` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
